fix(mon-pix)?: align user-login chevron

--- a/mon-pix/app/styles/globals/_layout.scss
+++ b/mon-pix/app/styles/globals/_layout.scss
@@ -68,7 +68,6 @@ img {
 /* Global container */
 %global-container {
   width: 100%;
-  max-width: 96rem;
   margin-inline: auto;
   padding-inline: var(--pix-spacing-4x);
 
